--- a/style_book2.css
+++ b/style_book2.css
@@ -1,9 +1,9 @@
 .book .box{
     width: 50%;
-    height: 1000px;
+    height: 840px;
     margin-left: 470px;
     margin-top: 100px;
-    background-color: rgb(253, 253, 253);
+    background-color: white;
 }
 
 .head_room{
@@ -16,7 +16,7 @@
 
 
 #tab{
-    width: 300px;
+    width: 350px;
     
 }
 
@@ -50,7 +50,7 @@
     border: 2px solid;
     border-radius: 100px;
     color: rgb(29, 233, 90);
-    
+
 }
 
 .gg-check-o::after {
@@ -78,7 +78,7 @@
     height: 40px;
     border: 2px solid;
     border-radius: 100px;
-    
+    color: rgb(29, 233, 90);
     
 }
 
@@ -97,6 +97,37 @@
     transform-origin: bottom left;
     transform: rotate(45deg)
 }
+
+
+.gg-check-o2 {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 40px;
+    height: 40px;
+    border: 2px solid;
+    border-radius: 100px;
+    
+}
+
+.gg-check-o2::after {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    left: 8px;
+    top: 2px;
+    width: 10px;
+    height: 17px;
+    border-color: currentColor;
+    border-width: 0 2px 2px 0;
+    border-style: solid;
+    transform-origin: bottom left;
+    transform: rotate(45deg)
+}
+
+
 
 .gg-border-style-solid {
     transform: scale(var(--ggs,1));
@@ -122,6 +153,7 @@
     margin-top: 30px;
     margin-left: 320px;
     
+  
 }
 
 #check{
@@ -132,43 +164,31 @@
     margin-top: 30px;
 }
 
-#room{
+.summary{
+    margin-top: 40px;
     margin-left: 200px;
+    
 }
 
-#people{
-    margin-top: 10px;
-    margin-left: 200px;
-    width: 120px;
-    height: 40px;
-    background-color: whitesmoke;
-    border: none;
-    padding-left:20px;
+.boxsum{
+    
+    margin-right: 200px ;
+    height: 300px;
 }
 
-#people1{
-    margin-top: 10px;
-    margin-left: 50px;
-    width: 100px;
-    height: 40px;
-    background-color: whitesmoke;
-    border: none;
-    padding-left:20px;
-    font-size: 12px;
+.summary h1{
+
+    font-size: 20px;
 }
 
-#cleaning{
+.add{
+    margin-top: 80px;
+    float: left;
     margin-left: 200px;
-    margin-top: 20px;
-}
-
-#promotion{
-    margin-left: 200px;
-    margin-top: 20px;
 }
 
 .next{
-    margin-top: 30px;
+    margin-top: 80px;
     float: right;
     margin-right: 250px;
 }
@@ -182,9 +202,4 @@ button{
     border: 2px solid transparent;
     transition: all 0.3s ease;
     font-size: 17px;
-}
-
-
- h2{
-    font-size: 20px;
 }
