--- a/style_book3.css
+++ b/style_book3.css
@@ -1,9 +1,9 @@
 .book .box{
     width: 50%;
-    height: 1000px;
+    height: 950px;
     margin-left: 470px;
     margin-top: 100px;
-    background-color: rgb(253, 253, 253);
+    background-color: white;
 }
 
 .head_room{
@@ -16,7 +16,7 @@
 
 
 #tab{
-    width: 300px;
+    width: 450px;
     
 }
 
@@ -50,7 +50,7 @@
     border: 2px solid;
     border-radius: 100px;
     color: rgb(29, 233, 90);
-    
+
 }
 
 .gg-check-o::after {
@@ -69,34 +69,6 @@
     transform: rotate(45deg)
 }
 
-.gg-check-o1 {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    transform: scale(var(--ggs,1));
-    width: 40px;
-    height: 40px;
-    border: 2px solid;
-    border-radius: 100px;
-    
-    
-}
-
-.gg-check-o1::after {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute;
-    left: 8px;
-    top: 2px;
-    width: 10px;
-    height: 17px;
-    border-color: currentColor;
-    border-width: 0 2px 2px 0;
-    border-style: solid;
-    transform-origin: bottom left;
-    transform: rotate(45deg)
-}
 
 .gg-border-style-solid {
     transform: scale(var(--ggs,1));
@@ -122,6 +94,7 @@
     margin-top: 30px;
     margin-left: 320px;
     
+  
 }
 
 #check{
@@ -132,39 +105,13 @@
     margin-top: 30px;
 }
 
-#room{
+.total{
     margin-left: 200px;
+    margin-right: 200px;
 }
 
-#people{
-    margin-top: 10px;
-    margin-left: 200px;
-    width: 120px;
-    height: 40px;
-    background-color: whitesmoke;
-    border: none;
-    padding-left:20px;
-}
-
-#people1{
-    margin-top: 10px;
-    margin-left: 50px;
-    width: 100px;
-    height: 40px;
-    background-color: whitesmoke;
-    border: none;
-    padding-left:20px;
-    font-size: 12px;
-}
-
-#cleaning{
-    margin-left: 200px;
-    margin-top: 20px;
-}
-
-#promotion{
-    margin-left: 200px;
-    margin-top: 20px;
+h2{
+    font-size: 20px;
 }
 
 .next{
@@ -184,7 +131,12 @@ button{
     font-size: 17px;
 }
 
-
- h2{
-    font-size: 20px;
+#country{
+    margin-top: 10px;
+    width: 150px;
+    height: 40px;
+    background-color: whitesmoke;
+    border: none;
+    padding-left:20px;
 }
+
